Artifact artf1454769 : Android online | Notes | The notes pop-up font alignment and pop up alignment is not same for pdf and videos - fixed

--- a/www/css/dialogueprompt.css
+++ b/www/css/dialogueprompt.css
@@ -110,7 +110,10 @@
     }
     .commentSavebtn span,.commentCancelbtn span{
       color: #0088cc;
-      padding: 55px;
+     padding: 5px;
+    text-align: center;
+    display: block;
+    line-height: 30px;
     }
     .commentSavebtn{
         display: inline-block;
@@ -152,6 +155,7 @@
           filter: alpha(opacity=50);
           opacity: .5;
         }
+		body #commentModal  .commentmodal-dialog {margin: -50px 0 0 -150px; top: 50%; position: fixed; left: 50%;}
     }
     @media handheld, only screen and (max-width: 360px) {
        .commentform-control {
@@ -177,8 +181,5 @@
 }
 
 @media only screen and (min-width : 375px) and (max-width : 667px) and (orientation : landscape){
-    body #commentModal  .commentmodal-dialog {
-        margin: 33% auto;
-        top:-60px;
-    }
+body #commentModal  .commentmodal-dialog {margin: -50px 0 0 -150px; top: 50%; position: fixed; left: 50%;}
 }
